fix(ui): fix animation of sidebar when collapsing

--- a/resources/css/modules/sidebar.css
+++ b/resources/css/modules/sidebar.css
@@ -1,9 +1,9 @@
 #sidebar {
-    @apply max-sm:fixed max-sm:top-0 max-sm:left-0 max-sm:h-dvh max-sm:w-[80vw] max-sm:bg-white max-sm:z-[110] max-sm:-translate-x-full sm:col-span-4 md:col-span-3;
+    @apply max-sm:fixed max-sm:top-0 max-sm:left-0 max-sm:h-dvh max-sm:w-[80vw] max-sm:bg-white max-sm:z-[110] max-sm:-translate-x-full sm:col-span-4 max-sm:transition-transform max-sm:duration-150 max-sm:ease-in-out md:col-span-3;
 }
 
 #sidebar[data-opened] {
-    @apply max-sm:translate-x-0 max-sm:transition-transform max-sm:duration-300 max-sm:ease-in-out ;
+    @apply max-sm:translate-x-0;
 }
 
 #sidebar-content {
